testsuite/tests/lib-dynlink-initializers/test10_main.byte.reference
Error: Failure("Plugin error")
Raised at Stdlib.failwith in file "stdlib.ml", line 29, characters 17-33
Called from Test10_plugin.g in file "test10_plugin.ml", line 3, characters 2-21
Called from Test10_plugin.f in file "test10_plugin.ml", line 6, characters 2-6
Called from Test10_plugin in file "test10_plugin.ml", line 10, characters 2-6
Called from Dynlink.Bytecode.run in file "otherlibs/dynlink/dynlink.ml", line 152, characters 16-25
Re-raised at Dynlink.Bytecode.run in file "otherlibs/dynlink/dynlink.ml", line 154, characters 6-137
Called from Dynlink_common.Make.load.(fun) in file "otherlibs/dynlink/dynlink_common.ml", line 361, characters 11-54
Called from Stdlib__List.iter in file "list.ml", line 112, characters 12-15
Called from Stdlib__Fun.protect in file "fun.ml", line 33, characters 8-15
Re-raised at Stdlib__Fun.protect in file "fun.ml", line 38, characters 6-52
Called from Test10_main in file "test10_main.ml", line 51, characters 13-69
